Archive2/ef/cd9676da67112d/output
main.cpp: In instantiation of 'typename std::enable_if<(std::extent<_Tp>::value != 0)>::type experimental::make_unique(Args&& ...) [with T = int [1]; Args = {int}; typename std::enable_if<(std::extent<_Tp>::value != 0)>::type = void]':
main.cpp:37:41:   required from here
main.cpp:31:7: error: static assertion failed: array with known bounds not allowed for std::make_shared
       static_assert( !( extent< T >::value != 0 ),"array with known bounds not allowed for std::make_shared");
       ^
